appId: com.pi.extension.test_app
---
- tapOn: "increment-button"
- tapOn: "increment-button"
- assertVisible: "Count: 2"
